--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
       <artifactId>cglib</artifactId>
       <version>3.2.5</version>
     </dependency>
+    <dependency>
+      <groupId>net.spy</groupId>
+      <artifactId>spymemcached</artifactId>
+      <version>2.12.3</version>
+    </dependency>
   </dependencies>
 </project>
