--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,10 @@
       <artifactId>spymemcached</artifactId>
       <version>2.12.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.javaparser</groupId>
+      <artifactId>javaparser-core</artifactId>
+      <version>3.2.5</version>
+    </dependency>
   </dependencies>
 </project>
