--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,11 @@
       <artifactId>spymemcached</artifactId>
       <version>2.12.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
