--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,10 @@
       <artifactId>javaparser-core</artifactId>
       <version>3.2.5</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 </project>
